footer alignment fixes

--- a/style.css
+++ b/style.css
@@ -275,7 +275,6 @@ body {
     max-width: 650px;
     display: flex;
     flex-direction: row;
-    flex-grow: 2;
     margin-left: 20px;
     padding-right: 10%;
 
@@ -311,7 +310,7 @@ body {
         display: flex;
         background-color: #1B203D;
         text-align: center;
-        justify-content: space-around;
+        justify-content: space-between;
         color: #BAC5CF;
         width: 100%;
         height: 244px;
@@ -322,6 +321,7 @@ body {
         .fleft {
         text-align: left;
         float: right;
+        padding-left: 10%;
       }
 
       .fcenter {
@@ -331,4 +331,5 @@ body {
       .fright {
         text-align: right;
         float: right;
+        padding-right: 10%
       }
